--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,12 +16,14 @@
         <ListView
             android:id="@+id/listview"
             android:layout_width="200dp"
-            android:layout_height="200dp"></ListView>
+            android:layout_height="200dp"/>
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="match_parent"
+            android:layout_width="248dp"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="#F00"
             android:text="@string/this_is_some_random_text" />
 
         <LinearLayout
@@ -34,7 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Like" />
+                android:text="@string/button1" />
 
             <Space
                 android:layout_width="wrap_content"
@@ -46,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Dislike" />
+                android:text="@string/button2" />
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
