--- a/app/src/main/res/layout/listitem_layout.xml
+++ b/app/src/main/res/layout/listitem_layout.xml
@@ -3,4 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/listitem_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    android:textAlignment="center"
+    android:gravity="center_horizontal"
+    android:textSize="30sp"/>
